Prevent horizontal scrolling

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@ body {
     color: white;
     background-color: #333333;
     font-family: JetBrains Mono, Verdana, Geneva, Tahoma, sans-serif;
+    overflow-x: hidden;
 }
 
 textarea {
